# qunivviewer-ivsets3-qarchiveplayer

ivsets3/: CMakeLists.txt  conanfile.txt  qmldir
ivsets3/.gitea/workflows/: cmake.yaml
ivsets3/cmake/: version.h.in  version.rc.in
ivsets3/qml/: IVCamsBlock.qml  IVNewQmlWindow.qml  IVSetZone.qml  IVSetZoneWindow.qml  IVSets3.qml  IVSets3Window.qml  IVSetsDelegate.qml  RightPanelBlock.qml  SetsBlock.qml  TopPanelBlock.qml
ivsets3/qml/client/: IVClientCamsBlock.qml  IVClientCamsDelegate.qml  IVClientCamsSlots.qml  IVClientHeaderMini.qml  IVClientLeftMenu.qml  IVClientMainRect.qml  IVClientPreviewCam.qml  IVClientRect.qml  IVClientRowCam.qml  IVClientSetsAndCamsBlock.qml  IVClientSetsAndCamsBlockImp.qml  IVClientSetsBlock.qml  IVClientSetsDelegate.qml  IVClientSetsSettingsBlock.qml  IVClientSetsSync.qml  IVClientSetsZone.qml  IVClientSlotDelegate.qml  IVClientTabDelegate.qml  IVClientTabsPanel.qml  IVClientTopEditPanel.qml  IVClientZone.qml  IVClientZoneSettingsBlock.qml  IVClientZonesDelegate.qml  IVExportHistory.qml  IVSegmentedControlAdaptive.qml  IVSourcesListCustom.qml  IVSourcesListFact.qml  IVSourcesListFlat.qml
ivsets3/qml/client/archive/: IVClientArchiveWindow.qml  IVEventsFilter.qml
ivsets3/src/: IVCustomSets.cpp  IVCustomSets.h  ivsets3_plugin.cpp  ivsets3_plugin.h  sourceTree.cpp  sourceTree.h
ivsets3/src/archive/: IVArchSource.cpp  IVArchSource.h  IVMainArea.cpp  IVMainArea.h
ivsets3/src/archive/filter/: treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h
qarchiveplayer/: .gitignore  CMakeLists.txt  conanfile.txt
qarchiveplayer/.gitea/workflows/: cmake.yaml
qarchiveplayer/cmake/: copy_runtime_deps.cmake
qarchiveplayer/other/: dataloader.js  qmldir
qarchiveplayer/qml/: ActiveExportsButton.qml  ArchiveControls.qml  ArchiveControls.qml.autosave  ArchiveMarker.qml  CommonArchiveCameraBar.qml  CommonArchiveTimeline.qml  CursorRect.qml  EventButtons.qml  ExportSettingsButton.qml  FillRect.qml  FillRect2.qml  FrameRewindButtons.qml  FrameTimeButton.qml  IVArcSliderControl.qml  IVArc_slider_new2.qml  IVArchiveContextMenu.qml  IVArchivePlayer.qml  IVArchivePlayerMin.qml  IVButtonFullPaneArc.qml  IVButtonPaneArc.qml  IVButtonTopPanel.qml  IVCommonArchiveStrip.qml  IVSeparator.qml  IVSourceListView.qml  IntervalScaleButton.qml  LabeledCalendarButton.qml  PlayerControls.qml  ScreenshotButton.qml  SettingsButton.qml  SoundSlider.qml  SyncUploader.qml  UploadProgressBar.qml  main.qml  qmainexport.qml
qarchiveplayer/src/: AppInfo.cpp  AppInfo.h  ArchiveSegmentStreamer.cpp  ArchiveSegmentStreamer.h  EventsModel.cpp  EventsModel.h  EventsProjectionModel.cpp  EventsProjectionModel.h  ExportController.cpp  ExportController.h  ExportListModel.cpp  ExportListModel.h  ExportManager.cpp  ExportManager.h  FrameBuffer.h  FullnessModel.cpp  FullnessModel.h  FullnessProjectionModel.cpp  FullnessProjectionModel.h  ImagePipeline.cpp  ImagePipeline.h  Nv12Frame.cpp  Nv12Frame.h  PrimitiveOverlay.cpp  PrimitiveOverlay.h  VideoItem.cpp  VideoItem.h  VideoSegmentDecoder.cpp  VideoSegmentDecoder.h  WebSocketClient.cpp  WebSocketClient.h  qarchive_player.cpp  qarchive_player.h  qarchiveplayer_plugin.cpp  qarchiveplayer_plugin.h  qpreviewer.h  treeitem.cpp  treeitem.h  treemodel.cpp  treemodel.h  (+1 more)
qviewer/: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  conanfile.txt
qviewer/cmake/: iv.cmake
qviewer/other/: qmldir
qviewer/qml/: IVViewer.qml
qviewer/src/: qviewer_plugin.cpp  qviewer_plugin.h
